# realtime_urdf_filter

./: CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  mainpage.dox  manifest.xml  package.xml  setup_bash.bash  start_tracker.sh
cmake/: FindOpenNI.cmake
include/: SamplesConfig.xml
include/GL3/: gl3.h
include/realtime_self_filter/: FrameBufferObject.h  renderable.h  rgbd_subscriber.h  shader_wrapper.h  urdf_renderer.h
include/realtime_urdf_filter/: FrameBufferObject.h  depth_and_info_subscriber.h  realtime_urdf_filter_nodelet.h  renderable.h  shader_wrapper.h  urdf_filter.h  urdf_renderer.h
include/shaders/: test1.frag  test1.vert  urdf_filter.frag  urdf_filter.vert
launch/: create_pc.launch  filter.launch  filter_parameters.yaml  realtime_self_filter.launch  realtime_urdf_filter.launch  realtime_urdf_filter_nodelet.launch  tracker.launch
plugins/: nodelet_plugins.xml
src/: .urdf_filter.cpp.swp  FrameBufferObject.cpp  realtime_self_filter.cpp  realtime_urdf_filter.cpp  realtime_urdf_filter_nodelet.cpp  renderable.cpp  shader_wrapper.cpp  urdf_filter.cpp  urdf_filtered_tracker.cpp  urdf_renderer.cpp
urdf/: example.urdf.xml  saphari_workspace.urdf.xml
